--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>내 강의실 - GritEdu</title>
   <link rel="stylesheet" href="../assets/css/main.css" />
   <script type="module" src="/assets/js/common.js"></script>
