--- a/login.html
+++ b/login.html
@@ -36,8 +36,8 @@
       const password = document.getElementById("password").value;
       try {
         await signInWithEmailAndPassword(auth, email, password);
-        // ✅ 로그인 후 대시보드로 바로 이동하지 말고 메인으로
-        location.href = "/index.html";
+        // 로그인 후 루트로 이동 (index.html 표시되지만 주소는 / 로 간결)
+        location.href = "/";
       } catch (err) {
         alert("로그인 실패: " + (err?.message || err));
       }
